--- a/perfumery.scss
+++ b/perfumery.scss
@@ -143,7 +143,7 @@ h1{
                             content:"";
                             position: absolute;
                             margin-left: -2rem;
-                            background: url("../img/heart.svg") no-repeat;
+                            background: url("img/heart.svg") no-repeat;
                             width: 25px;
                             height: 25px;
                             top: 50%;
